@@ -8,6 +8,7 @@ v7.13.0
 
 v7.12.1
   - Runner without tag should pick builds without tag only
+  - Explicit error in the GitLab when commit not found.
   
 v7.12.0
   - Endless scroll on the dashboard
